minikube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yeanot-deployment
  labels:
    app.kubernetes.io/name: yeanot-minikube
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: yeanot-minikube
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yeanot-minikube
    spec:
      containers:
        - name: yeanot
          image: yeanot
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 128Mi
          ports:
            - name: web-port
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /ping
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: yeanot-minikube
  labels:
    app.kubernetes.io/name: yeanot-minikube
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: web-port
      protocol: TCP
      name: web
  selector:
    app.kubernetes.io/name: yeanot-minikube
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yeanot-ingress
spec:
  rules:
    - host: yeanot.example.com
  defaultBackend:
    service:
      name: yeanot-minikube
      port:
        number: 80
